package com.receiptmanagement.domain.exception;

public final class InvalidPaymentException extends Exception {

    public InvalidPaymentException(String message) {
        super(message);
    }
}

