@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "domain.model" {
    class PaymentDetails {
        - paymentId : String
        - amount : BigDecimal
        - currency : String
        - paymentMethod : String
        - completed : boolean
        - paidAt : LocalDateTime
    }

    class CustomerInformation {
        - customerId : String
        - fullName : String
        - email : String
    }

    class ReceiptDocument {
        - receiptId : String
        - customerId : String
        - customerName : String
        - customerEmail : String
        - paymentId : String
        - amount : BigDecimal
        - currency : String
        - paymentMethod : String
        - issuedAt : LocalDateTime
        - formattedContent : String
    }
}

package "domain.exception" {
    class InvalidPaymentException
}

package "application" {
    interface PaymentValidation
    interface ReceiptFormatter
    interface Logger

    class ReceiptGenerationService {
        + generateReceipt(paymentDetails, customerInformation) : Optional<ReceiptDocument>
    }
}

package "port" {
    interface NotificationSystemInterface
    interface ExceptionHandlerInterface
    interface DatabaseInterface
}

package "infrastructure" {
    class StandardPaymentValidation
    class PlainTextReceiptFormatter
    class DatabaseLogger
    class ConsoleNotificationSystem
    class ConsoleExceptionHandler
    class InMemoryDatabase
}

ReceiptGenerationService --> PaymentValidation
ReceiptGenerationService --> ReceiptFormatter
ReceiptGenerationService --> Logger
ReceiptGenerationService --> NotificationSystemInterface
ReceiptGenerationService --> ExceptionHandlerInterface

PaymentValidation ..> PaymentDetails
PaymentValidation ..> CustomerInformation
PaymentValidation ..> InvalidPaymentException

ReceiptFormatter ..> PaymentDetails
ReceiptFormatter ..> CustomerInformation
ReceiptFormatter ..> ReceiptDocument

Logger ..> ReceiptDocument
Logger ..> PaymentDetails
Logger --> DatabaseInterface

NotificationSystemInterface ..> ReceiptDocument
NotificationSystemInterface ..> CustomerInformation

ExceptionHandlerInterface ..> InvalidPaymentException
ExceptionHandlerInterface ..> PaymentDetails
ExceptionHandlerInterface ..> CustomerInformation

StandardPaymentValidation ..|> PaymentValidation
PlainTextReceiptFormatter ..|> ReceiptFormatter
DatabaseLogger ..|> Logger
ConsoleNotificationSystem ..|> NotificationSystemInterface
ConsoleExceptionHandler ..|> ExceptionHandlerInterface
DatabaseLogger --> DatabaseInterface
InMemoryDatabase ..|> DatabaseInterface
ReceiptDocument +-- "Builder" ReceiptDocument

@enduml

